# os_lab_2019

./: .gitignore  README.md  update.sh
lab0/: Report.md
lab0/hello/: a.out  hello_world
lab0/src/: hello_world
lab0/text/: lab0.md
lab1/: Report.md  average.sh  numbers.txt  scrypt
lab1/src/: DateTime  ER.txt  average.sh  background.sh  cake_rhymes.txt  create_numbers.sh  date.sh  ex3  hello.sh  my-bash.sh  num.txt  numb_gen.sh  number.txt  number_generator.sh  numbers  numbers.txt  p.txt  rand  random.sh  randomer.sh  scr.sh  script.sh  show_all  task_1  task_3.sh  test.sh  test.txt  with_cake.txt
lab1/text/: lab1.md
lab2/: Report.md
lab2/src/: ans.md
lab2/text/: lab2.md
lab3/: Report.md
lab3/src/: MietOSSequentially  ans.md  array.txt  data_0.txt  data_1.txt  data_2.txt  data_3.txt  data_4.txt  ex5.c  exe  exe_5.c  exec.c  exec_sequential  exec_sequential.c  exercise5.c  file.txt  (+36 more)
lab4/: Report.md
lab4/src/parallel_sum/: CMakeLists.txt  build&run_parallel_sum.sh  makefile  parallel_sum  parallel_sum.c  sum.c  sum.h  utils.c
lab7/: README.txt
lab7/src/: CMakeLists.txt  conn.c  conn.h  main.c  makefile  run.sh  tc+.c  tcpcli  tcpclient  tcpclient.c  tcpserv  tcpserver  tcpserver.c  ts+.c  uc+.c  udp_c  udpclient  udpclient.c  udpserv  udpserver  udpserver.c  us+.c
lab7/src/num_partition/: CMakeLists.txt  number_partition.c  number_partition.h
отчет/: ПИН-35_ЛеХоангЖа_ЛP-1.docx  ПИН-35_ЛеХоангЖа_ЛP-2.docx  ПИН-35_ЛеХоангЖа_ЛP-3.docx  ПИН-35_ЛеХоангЖа_ЛP-4.docx  ПИН-35_ЛеХоангЖа_ЛP-5.docx  ПИН-35_ЛеХоангЖа_ЛP-6.docx  ПИН-35_ЛеХоангЖа_ЛP-7.docx
(+160 files in other folders)
